--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,14 @@
     "enzyme-adapter-react-16": "^1.15.1",
     "is-empty": "^1.2.0",
     "jwt-decode": "^2.2.0",
+    "moxios": "^0.4.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
+    "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
     "save": "^2.4.0"
   },
