--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "redux": "^4.0.4",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
-    "save": "^2.4.0"
+    "save": "^2.4.0",
+    "tv4": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
