--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "redis": "^2.8.0",
     "validator": "^11.1.0"
   },
   "devDependencies": {
