--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "enzyme-adapter-react-16": "^1.15.2",
     "is-empty": "^1.2.0",
     "jwt-decode": "^2.2.0",
+    "materialize-css": "^1.0.0",
     "moxios": "^0.4.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
