--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "is-empty": "^1.2.0",
+    "jodit-react": "^1.0.37",
     "jwt-decode": "^2.2.0",
     "materialize-css": "^1.0.0",
     "moxios": "^0.4.0",
