--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "moxios": "^0.4.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-flip-toolkit": "^7.0.8",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
