--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-flip-toolkit": "^7.0.8",
+    "react-quill": "^1.3.3",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
