--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
     "save": "^2.4.0",
+    "styled-components": "^5.1.0",
     "tv4": "^1.3.0"
   },
   "scripts": {
